k8s/mysql-statefulset.yaml
#### MYSQL STATEFULSET YAML FILE ###

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql-service
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql  
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
          - name: mysql-initdb
            mountPath: /docker-entrypoint-initdb.d/init.sql
            subPath: init.sql  
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc  
        - name: mysql-initdb
          configMap:
            name: mysql-initdb
